# api/endpoint.go
@@ -43,6 +43,7 @@ func retrieveEndpoint(svc callhome.Service) endpoint.Endpoint {
 			From:    req.from,
 			To:      req.to,
 			Country: req.country,
+			City:    req.city,
 		}
 		tm, err := svc.Retrieve(ctx, pm, filter)
 		if err != nil {
@@ -70,6 +71,7 @@ func retrieveSummaryEndpoint(svc callhome.Service) endpoint.Endpoint {
 			From:    req.from,
 			To:      req.to,
 			Country: req.country,
+			City:    req.city,
 		}
 		summary, err := svc.RetrieveSummary(ctx, filter)
 		if err != nil {
@@ -92,6 +94,7 @@ func serveUI(svc callhome.Service) endpoint.Endpoint {
 			From:    req.from,
 			To:      req.to,
 			Country: req.country,
+			City:    req.city,
 		}
 		res, err := svc.ServeUI(ctx, filter)
 		return uiRes{
